--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.6.0",
     "framer-motion": "^5.3.3",
     "next": "^12.0.7",
+    "next-auth": "^4.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
